hphp/hack/test/typecheck/contravariant_this2.php.out
File "contravariant_this2.php", line 5, characters 24-27:
The "this" type cannot be used in this contravariant position because its enclosing class "C" is final and has a variant type parameter "T" (Typing[4158])
