hphp/hack/test/typecheck/contravariant_this2.php
<?hh // strict

final class C<+T> {
  public function __construct(private T $v) {}
  public function put1(this $v): void {}
}
